--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -9,4 +9,6 @@ $color__teal:           #27b4a8;
 
 // Bulma
 $primary: $color__darker_salmon;
-$primary-invert: $color__faint;
+$link: $color__darker_salmon;
+
+@import "~bulma/sass/utilities/_all";
