--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,7 +1,8 @@
 // Variables
 @import 'variables';
 
-@import "~buefy/src/scss/buefy-build";
+@import "~bulma";
+@import "~buefy/src/scss/buefy";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "~@fortawesome/fontawesome-free/scss/solid";
